fix overflow

--- a/styles/About.scss
+++ b/styles/About.scss
@@ -10,6 +10,7 @@
   font-weight: 400;
   font-size: 43px;
   z-index: 3;
+  overflow: hidden;
 
   &__about {
     padding: 0px 220px;
