--- a/styles/Project.scss
+++ b/styles/Project.scss
@@ -112,7 +112,7 @@
 
   .svg-bottom {
     position: absolute;
-    bottom: 0px;
+    bottom: -1px;
     left: 0px;
     z-index: 2;
   }
