--- a/styles/Title.module.scss
+++ b/styles/Title.module.scss
@@ -9,6 +9,7 @@
   @include sectionDefault;
   @include sectionColumn;
   height: 100vh;
+  width: 100%;
   position: relative;
   z-index: 2;
   padding: 0px;
@@ -42,8 +43,6 @@
 }
 
 .graphBg {
-  width: 100%;
-  height: 100%;
   position: fixed;
   z-index: 1;
   background-attachment: fixed;
